@@ -3,6 +3,7 @@
 0.132 "FIXME"
  441859 in 0.131, 'read next unread' didn't always work (Artur Jachacy)
  444184 0.131 fails to build on RH4/CentOS4 (Steven Ellis)
+ 349490 better info for the tool-tip of the Tasks button (Douglas Bollinger)
 
 0.131 "Ghosts: First Variation"
  441442 bad yEnc decoding / occasional crash (Charles + valgrind)
